# celery-flask-email

./: pyproject.toml
app/run/: __init__.py  __main__.py  create_app.py
app/templates/: base.html  example1.html
app/views/: __init__.py  email.py
