[tool.poetry]
name = "Celery App"
version = "0.1.0"
description = "Celery app"
authors = ["Rodrigo"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
celery = "^5.2.7"
Flask-Mail = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
